[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "yabtdual"
version = "0.1.0"
description = "Yet Another Bluetooth Dualboot Sync Tool - Sync Windows Bluetooth keys to Linux"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-registry>=1.3.1",
]

[project.scripts]
yabtdual = "yabtdual.cli:main"

[tool.setuptools.packages.find]
where = ["src"]